# aphelion-framework-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE-1.0.0.md  RELEASING.md  RUST_AI_CORE_INTEGRATION.md  SECURITY.md  SPEC.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
crates/aphelion-core/: Cargo.toml  README.md  pyproject.toml
crates/aphelion-core/python/aphelion/: __init__.py
crates/aphelion-core/src/: acceleration.rs  backend.rs  burn_backend.rs  config.rs  cubecl_backend.rs  diagnostics.rs  error.rs  export.rs  graph.rs  lib.rs  pipeline.rs  prelude.rs  rust_ai_core.rs  tritter_backend.rs  validation.rs
crates/aphelion-core/src/python/: backend.rs  config.rs  diagnostics.rs  graph.rs  mod.rs  pipeline.rs  validation.rs
crates/aphelion-core/src/wasm/: backend.rs  config.rs  diagnostics.rs  graph.rs  mod.rs  pipeline.rs  validation.rs
crates/aphelion-examples/: Cargo.toml  README.md
crates/aphelion-examples/examples/: demo.rs  tritter_demo.rs
crates/aphelion-examples/src/: basic_usage.rs  custom_backend.rs  lib.rs  pipeline_stages.rs  validation.rs
crates/aphelion-macros/: Cargo.toml  README.md
crates/aphelion-macros/src/: lib.rs
crates/aphelion-python/: Cargo.toml  README.md  pyproject.toml
crates/aphelion-python/python/aphelion/: __init__.py  __init__.pyi
crates/aphelion-python/src/: backend.rs  config.rs  core.rs  diagnostics.rs  graph.rs  lib.rs  pipeline.rs  validation.rs
crates/aphelion-tests/: Cargo.toml  README.md
crates/aphelion-tests/src/: lib.rs
docs/: API-GUIDE.md  ARCHITECTURE.md  ROADMAP-1.0.0.md  SECURITY_BADGE_SETUP_GUIDE.md  architecture.md  getting-started.md  spec.md
docs/screenshots/: demo_output.txt  tritter_demo_output.txt
