[workspace]
resolver = "2"
members = [
    "crates/aphelion-core",
    "crates/aphelion-macros",
    "crates/aphelion-examples",
    "crates/aphelion-tests",
    "crates/aphelion-python",
]

[workspace.package]
version = "1.2.2"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
repository = "https://github.com/tzervas/aphelion-framework-rs"
description = "A unified frontend for AI model development in Rust"
keywords = ["ai", "machine-learning", "pipeline", "graph", "tracing"]
categories = ["development-tools", "science"]
readme = "README.md"

[workspace.dependencies]
# Core dependencies - latest stable versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time"] }

# Proc-macro dependencies
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Ecosystem dependencies (feature-gated)
burn = "0.20"
cubecl = "0.9"
rust-ai-core = "0.2.7"
candle-core = "0.9"
half = "2.7"

# Python bindings
pyo3 = "0.27"
pythonize = "0.27"
pyo3-async-runtimes = "0.27"

# Internal crates (path for dev, version for release)
aphelion-macros = { version = "1.2.2", path = "crates/aphelion-macros" }
aphelion-core = { version = "1.2.2", path = "crates/aphelion-core" }

# Patch unmaintained paste crate with maintained fork
# Requires patch-target branch in qlora-paste with name = "paste"
[patch.crates-io]
paste = { git = "https://github.com/tzervas/qlora-paste", branch = "patch-target" }
