[workspace]
resolver = "2"
members = [
    "crates/aphelion-core",
    "crates/aphelion-macros",
    "crates/aphelion-examples",
    "crates/aphelion-tests",
    "crates/aphelion-python",
]

[workspace.package]
version = "1.2.3"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
repository = "https://github.com/tzervas/aphelion-framework-rs"
description = "A unified frontend for AI model development in Rust"
keywords = ["ai", "machine-learning", "pipeline", "graph", "tracing"]
categories = ["development-tools", "science"]
readme = "README.md"

[workspace.dependencies]
# Core dependencies - latest stable versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time"] }

# Proc-macro dependencies
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
qlora-paste = "1.0.20"

# Ecosystem dependencies (feature-gated)
burn = "0.20"
cubecl = "0.9"
rust-ai-core = "0.2.7"
candle-core = "0.9"
half = "2.7"
qlora-gemm = "0.20.0"

# Python bindings
pyo3 = "0.27"
pythonize = "0.27"
pyo3-async-runtimes = "0.27"

# Internal crates (path for dev, version for release)
aphelion-macros = { version = "1.2.3", path = "crates/aphelion-macros" }
aphelion-core = { version = "1.2.3", path = "crates/aphelion-core" }

# Patch candle crates with qlora-candle fork using maintained dependencies
# Dependency chain: candle-core -> qlora-gemm v0.20.0 -> qlora-paste v1.0.20
# PR'd to huggingface/candle for future upstream adoption
[patch.crates-io]
candle-core = { git = "https://github.com/tzervas/qlora-candle.git", branch = "use-qlora-gemm" }
