[package]
name = "aphelion-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for Aphelion AI framework - unified frontend for AI model development"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
# Ecosystem integrations
burn = ["dep:burn"]
cubecl = ["dep:cubecl"]
rust-ai-core = ["dep:rust-ai-core", "dep:candle-core"]
cuda = ["rust-ai-core", "rust-ai-core/cuda"]
tritter-accel = []
tokio = ["dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, optional = true }

aphelion-macros = { workspace = true }

# Ecosystem dependencies
burn = { workspace = true, optional = true }
cubecl = { workspace = true, optional = true }
rust-ai-core = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
