[package]
name = "aphelion-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for Aphelion AI framework - unified frontend for AI model development"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
# Ecosystem integrations
burn = ["dep:burn"]
cubecl = ["dep:cubecl"]
rust-ai-core = ["dep:rust-ai-core", "dep:candle-core", "dep:half"]
cuda = ["rust-ai-core", "rust-ai-core/cuda"]
tritter-accel = []
tokio = ["dep:tokio"]
# Python bindings (for building wheels with maturin)
python = ["dep:pyo3", "dep:pythonize", "dep:pyo3-async-runtimes", "tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, optional = true }

aphelion-macros = { workspace = true }

# Ecosystem dependencies
burn = { workspace = true, optional = true }
cubecl = { workspace = true, optional = true }
rust-ai-core = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
half = { workspace = true, optional = true }

# Python bindings (optional, for building wheels)
pyo3 = { workspace = true, optional = true, features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { workspace = true, optional = true, features = ["tokio-runtime"] }
pythonize = { workspace = true, optional = true }
