[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "aphelion-framework"
# Version is read dynamically from Cargo.toml by maturin
dynamic = ["version"]
description = "Python bindings for the Aphelion AI Framework - unified frontend for AI model development"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Tyler Zervas", email = "tz-dev@vectorweight.com" }
]
keywords = ["ai", "machine-learning", "deep-learning", "framework", "rust", "gpu", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tzervas/aphelion-framework-rs"
Repository = "https://github.com/tzervas/aphelion-framework-rs"
Documentation = "https://github.com/tzervas/aphelion-framework-rs#readme"
Issues = "https://github.com/tzervas/aphelion-framework-rs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[tool.maturin]
# Build settings - now building from aphelion-core with python feature
python-source = "python"
module-name = "aphelion"
features = ["python"]

# Bindings type
bindings = "pyo3"

# Strip debug symbols for smaller wheels
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
