[package]
name = "aphelion-examples"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
aphelion-core = { path = "../aphelion-core" }
serde_json = { workspace = true }
