[package]
name = "aphelion-examples"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
publish = false

[features]
default = []
tritter-accel = ["aphelion-core/tritter-accel"]

[dependencies]
aphelion-core = { workspace = true }
serde_json = { workspace = true }
