[package]
name = "aphelion-macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Procedural macros for Aphelion AI pipeline framework"
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
