[package]
name = "aphelion-tests"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = []
burn = ["aphelion-core/burn"]
tokio = ["aphelion-core/tokio", "dep:tokio"]

[dependencies]
aphelion-core = { path = "../aphelion-core" }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
