[package]
name = "aphelion-tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
publish = false

[features]
default = []
burn = ["aphelion-core/burn"]
cubecl = ["aphelion-core/cubecl"]
tokio = ["aphelion-core/tokio", "dep:tokio"]
tritter-accel = ["aphelion-core/tritter-accel"]

[dependencies]
aphelion-core = { path = "../aphelion-core" }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
